feat: add favicon and update index.html to include it

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>KI Trading Model - Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <style>
         * {
             margin: 0;
@@ -1807,7 +1808,13 @@
     </div>
 
     <header class="header">
-        <h1>KI Trading Model Dashboard</h1>
+        <h1>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#3b82f6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="width: 28px; height: 28px; margin-right: 10px; vertical-align: middle;">
+                <polyline points="22 7 13.5 15.5 8.5 10.5 2 17"/>
+                <polyline points="16 7 22 7 22 13"/>
+            </svg>
+            KI Trading Model Dashboard
+        </h1>
         <div class="header-info">
             <div class="api-docs-buttons">
                 <a href="/docs" target="_blank" class="btn-api-docs" title="API Dokumentation (Swagger UI)">
