feat(ui): Add Swagger UI and API Docs buttons to dashboard header
- Added two separate buttons in dashboard header:
  * "Swagger UI" (blue, /docs) - Interactive API documentation
  * "API Docs" (green, /redoc) - ReDoc documentation
- Both buttons open in new tabs
- Color-coded: blue for Swagger, green for ReDoc
- Enhanced icons for better visual distinction
- Tooltips explain each documentation type

--- a/static/index.html
+++ b/static/index.html
@@ -1817,12 +1817,22 @@
         </h1>
         <div class="header-info">
             <div class="api-docs-buttons">
-                <a href="/docs" target="_blank" class="btn-api-docs" title="API Dokumentation (Swagger UI)">
+                <a href="/docs" target="_blank" class="btn-api-docs btn-backend" title="Swagger UI - Interaktive API Dokumentation">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
                         <line x1="16" y1="13" x2="8" y2="13"></line>
                         <line x1="16" y1="17" x2="8" y2="17"></line>
+                        <line x1="12" y1="9" x2="8" y2="9"></line>
+                    </svg>
+                    Swagger UI
+                </a>
+                <a href="/redoc" target="_blank" class="btn-api-docs btn-frontend" title="ReDoc - API Dokumentation">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+                        <circle cx="10" cy="8" r="2"></circle>
+                        <path d="M10 12v5"></path>
                     </svg>
                     API Docs
                 </a>
